# Stereo-Visual-Odometry

./: CMakeLists.txt  README.md  package.xml
include/stereo_visual_odometry/: stereo_visual_odometry.hpp  utils.hpp
include/stereo_visual_odometry/config/: config.hpp
include/stereo_visual_odometry/extractor/: ORBExtractor.hpp  extractor.hpp
include/stereo_visual_odometry/optimization/: G2O_Optimization.hpp
include/stereo_visual_odometry/optimizer/: CV_Optimizer.hpp  G2O_Optimizer.hpp
include/stereo_visual_odometry/tracker/: ORBTracker.hpp  opticalTracker.hpp  tracker.hpp
launch/: stereo_visual_odom.launch.py
params/: kitti00_param.yaml
rviz/: default.rviz
src/: stereo_visual_odometry.cpp  stereo_visual_odometry_node.cpp
src/extractor/: ORBExtractor.cpp  extractor.cpp
src/optimization/: G2O_Optimization.cpp
src/optimizer/: CV_Optimizer.cpp  G2O_Optimizer.cpp
src/tracker/: ORBTracker.cpp  opticalTracker.cpp
